refactor: Refactor tests and services for conciseness and best practices
Updated test class declarations to package-private, removed redundant public modifiers, fixed method signatures, and streamlined collection operations in services. Simplified exception messages and logging, improving overall code readability and maintainability.